[package]
name = "udb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.11.0"
eyre = "0.6.12"
fs_extra = "1.3.0"
regex = "1.11.0"
bincode = "1.3.3"
sha2 = "0.10"    # For hashing (SHA-256)
uuid = { version = "1", features = ["v4"] }  # For UUID formatting
num-bigint = "0.4.6"
rand = "0.9.0-alpha.2"
tempfile = "3.15.0"
chrono = "0.4.38"